// Copyright 2020 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message AwsSshInstanceSyncPerpetualTaskParams {
  string region = 1;
  bytes filter = 2;
  bytes aws_config = 3;
  bytes encrypted_data = 4;
}
